Modify color of button

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -81,7 +81,7 @@
 }
 
 .button {
-  @apply mt-3 bg-red-500 text-white rounded-lg px-1 py-2 text-base font-bold tracking-wider w-full outline-none;
+  @apply mt-3 bg-green-500 text-white rounded-lg px-1 py-2 text-base font-bold tracking-wider w-full outline-none border-none;
   a {
     @apply block;
   }
