--- a/templates/pages/rooms/edit_room.html
+++ b/templates/pages/rooms/edit_room.html
@@ -149,6 +149,7 @@
         </div>
         <button class="button">Edit</button>
       </form>
+      <button class="button bg-red-600">Delete Room</button>
     </div>
   </div>
 
