--- a/templates/pages/users/login.html
+++ b/templates/pages/users/login.html
@@ -15,7 +15,7 @@
         <div class="form_input rounded-bl-lg rounded-br-lg">
           {{form.password}}
         </div>
-        <button class="button mt-3 bg-red-500 text-white">Submit</button>
+        <button class="button">Submit</button>
       </form>
       {% include 'mixins/social_login.html' %}
     </div>
