Set security of editRoom by preventing other user from accessing edit_room page

--- a/templates/pages/rooms/detail.html
+++ b/templates/pages/rooms/detail.html
@@ -51,7 +51,7 @@
                 <span>{{room.bedrooms}} bedrooms &centerdot;</span>
                 <span>{{room.bathrooms}} bathrooms</span>
               </div>
-              {% if user.is_authenticated %}
+              {% if user.pk == room.host.pk %}
                 <button class="button">
                   <a href="{% url 'rooms:edit' room.pk %}">Edit Room</a>
                 </button>
