--- a/templates/pages/rooms/delete_room.html
+++ b/templates/pages/rooms/delete_room.html
@@ -150,7 +150,7 @@
         <button class="button">Edit</button>
       </form>
       <button class="button bg-red-600">
-        <a href="{% url 'rooms:delete' room.pk %}">Delete Room</a>
+        <a href="{% url 'rooms:delete' %}">Delete Room</a>
       </button>
     </div>
   </div>
