--- a/templates/pages/rooms/edit_room.html
+++ b/templates/pages/rooms/edit_room.html
@@ -147,7 +147,7 @@
             {% endif %}
           >
         </div>
-        <button class="button">Edit</button>
+        <button class="button px-1 py-2">Edit</button>
       </form>
       <button class="button bg-red-600">
         <a href="{% url 'rooms:delete' room.pk %}">Delete Room</a>
