--- a/templates/pages/users/signup.html
+++ b/templates/pages/users/signup.html
@@ -43,7 +43,7 @@
           <label for="birthdate">Birthdate:</label>
           <input type="date" id="birthdate" name="birthdate">
         </div>
-        <button class="button">Submit</button>
+        <button class="button px-1 py-2">Submit</button>
       </form>
       {% include 'mixins/social_login.html' %}
     </div>
