--- a/templates/pages/users/update_profile.html
+++ b/templates/pages/users/update_profile.html
@@ -92,7 +92,7 @@
         <div class="form_input rounded-br-lg rounded-bl-lg">
           <textarea id="bio" placeholder="Bio" name="bio">{{user.bio}}</textarea>
         </div>
-        <button class="button">Edit Profile</button>
+        <button class="button px-1 py-2">Edit Profile</button>
       </form>
       {% if user.login_method == 'email' %}
         <button class="button bg-red-500">
