--- a/templates/pages/users/change_password.html
+++ b/templates/pages/users/change_password.html
@@ -23,7 +23,7 @@
         <div class="form_input rounded-bl-lg rounded-br-lg">
           <input type="password" name="verify_password" id="verify_password" placeholder="Verify your new password">
         </div>
-        <button class="button bg-red-500">Change Password</button>
+        <button class="button bg-red-500 px-1 py-2">Change Password</button>
       </form>
       <button class="button bg-gray-700">
         <a href="{% url 'users:profile' user.pk %}">Back</a>
