--- a/templates/pages/users/login.html
+++ b/templates/pages/users/login.html
@@ -15,7 +15,7 @@
         <div class="form_input rounded-bl-lg rounded-br-lg">
           {{form.password}}
         </div>
-        <button class="button">Submit</button>
+        <button class="button px-1 py-2">Submit</button>
       </form>
       {% include 'mixins/social_login.html' %}
     </div>
