--- a/templates/pages/root/search.html
+++ b/templates/pages/root/search.html
@@ -125,7 +125,7 @@
           <label for="instant_book" class="text-lg font-bold mr-2">Instant Book</label>
           <input type="checkbox", name="instant_book" id="instant_book" {% if instant_book %}checked{% endif %}>
         </div>
-        <button class="button">Search</button>
+        <button class="form_button">Search</button>
       </form>
     </div>
   </div>
