--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -87,6 +87,10 @@
   }
 }
 
+.form_button {
+  @apply mt-3 px-1 py-2 bg-green-500 text-white rounded-lg text-base font-bold tracking-wider w-full outline-none border-none;
+}
+
 .social-login {
   .button {
     @apply rounded-lg text-base font-bold tracking-wider w-full outline-none;
