--- a/templates/pages/rooms/edit_room.html
+++ b/templates/pages/rooms/edit_room.html
@@ -147,10 +147,10 @@
             {% endif %}
           >
         </div>
-        <button class="button px-1 py-2">Edit</button>
+        <button class="form_button">Edit</button>
       </form>
       <button class="button">
-        <a href="{% url 'photos:create' room.pk %}">Add Photos</a>
+        <a href="{% url 'rooms:create-photo' room.pk %}">Add Photos</a>
       </button>
       <button class="button bg-red-600">
         <a href="{% url 'rooms:delete-room' room.pk %}">Delete Room</a>
