Modify search-bar to be centered on header

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,4 +1,4 @@
-<ul class="flex">
+<ul class="flex place-self-end">
   {% if user.is_authenticated %}
     <li class="nav_link">
       <a href="{% url 'rooms:create-room' %}">Create Room</a>
