--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 </head>
   <body class="text-gray-800 font-light mt-28 ">
     {% include 'partials/messages.html' %}
-    <header class='flex justify-between items-center px-32 border-b-2 mb-9 fixed w-full h-20 bg-white inset-0'>
+    <header class='grid grid-cols-3 justify-between items-center px-32 border-b-2 mb-9 fixed w-full h-20 bg-white inset-0'>
       <div class="flex ">
         <a href="{% url 'core:home' %}" class="mr-4 flex items-center">
           <img src="/static/logo.png" alt="logo" class="w-8 mr-2">
@@ -18,9 +18,11 @@
         </a>
       </div>
       {% block search-bar %}
-        <form action="{% url 'core:search' %}" class="w-1/5 ">
-          <input type="text" placeholder="Searching By City" name="city" class="shadow border-none outline-none px-8 py-3 rounded-3xl w-full border-gray-500 border">
-        </form>
+        <div class="w-full flex justify-center items-center">
+          <form action="{% url 'core:search' %}" class="w-3/4">
+            <input type="text" placeholder="Searching By City" name="city" class="shadow border-none outline-none px-8 py-3 rounded-3xl w-full border-gray-500 border">
+          </form>
+        </div>
       {% endblock search-bar %}
       {% include 'partials/nav.html' %}
     </header>
