--- a/templates/pages/reservations/reservation_detail.html
+++ b/templates/pages/reservations/reservation_detail.html
@@ -3,7 +3,7 @@
 {% load remainder_op %}
 
 {% block page_title %}
-    Reservation
+    Reservation-{{reservation}}
 {% endblock page_title %}
 
 {% block content %}
