--- a/templates/pages/users/update_profile.html
+++ b/templates/pages/users/update_profile.html
@@ -25,7 +25,7 @@
           </div>
         {% endif %}
       </div>
-      <form method="post" class="form">
+      <form method="post" class="form" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form_input rounded-tl-lg rounded-tr-lg">
           <label for="first_name">First Name</label>
