Create reservation room list and rename previous reservationRoomList to reservationList

--- a/templates/pages/users/profile.html
+++ b/templates/pages/users/profile.html
@@ -84,7 +84,7 @@
     </div>
     <div class="w-full h-full flex justify-center items-start">
       <button class="button w-1/2">
-        <a href="{% url 'reservations:room-list' user.pk %}">Reservation List</a>
+        <a href="{% url 'reservations:list' user.pk %}">Reservation List</a>
       </button>
     </div>
     
