--- a/templates/mixins/room_card.html
+++ b/templates/mixins/room_card.html
@@ -1,7 +1,7 @@
 <ul class="grid grid-cols-4 grid-rows-2-300px auto-rows-300px gap-4 gap-y-6">
   {% for room in rooms %}
     <li class="w-full">
-      {% if url_page %}
+      {% if url_page == 'reservations:host-room-list' %}
         <a href="{% url url_page request.user.pk room.pk %}">
       {% else %}
         <a href="{% url 'rooms:room-detail' room.pk %}">
