--- a/templates/pages/reservations/reservation_detail.html
+++ b/templates/pages/reservations/reservation_detail.html
@@ -20,37 +20,71 @@
                     {% endfor %}
                 </div>
             </div>
-            <main class="flex flex-col">
-                <div class="flex items-center ">
-                    <h1 class="text-3xl font-bold mb-4">{{room.name}}</h1>
-                    <span class="text-lg font-bold mb-2 ml-4 {% if reservation.status == 'pending' %} text-yellow-500 {% elif reservation.status == 'canceled' %} text-red-600 {% else %} text-green-600 {% endif %}">{{reservation.status|capfirst}}</span>
-                </div>
-                <div class="flex text-gray-500 mb-5">
-                    <div class="rating">
-                        <i class="fas fa-star text-red-500"></i>
-                        <span class="font-bold">{{room.get_review_points}}</span>
-                        <span class=" font-normal">({{room.reviews.count}})</span>
-                        <span class="mx-1">&centerdot;</span>
+            <main class="flex">
+                <div class="flex flex-col w-3/5">
+                    <div class="flex items-center ">
+                        <h1 class="text-3xl font-bold mb-4">{{room.name}}</h1>
+                        <span class="text-lg font-bold mb-2 ml-4 {% if reservation.status == 'pending' %} text-yellow-500 {% elif reservation.status == 'canceled' %} text-red-600 {% else %} text-green-600 {% endif %}">{{reservation.status|capfirst}}</span>
                     </div>
-                    {% if room.host.superhost %}
-                        <span class="ml-1">Superhost</span>
-                        <span class="mx-2">&centerdot;</span>
-                    {% endif %}
-                    <div class="font-medium">
-                        <span class="mr-1">{{room.address}},</span>
-                        <span class="mr-1">{{room.city}},</span>
-                        <span>{{room.country.name}}</span>
+                    <div class="flex text-gray-500 mb-5">
+                        <div class="rating">
+                            <i class="fas fa-star text-red-500"></i>
+                            <span class="font-bold">{{room.get_review_points}}</span>
+                            <span class=" font-normal">({{room.reviews.count}})</span>
+                            <span class="mx-1">&centerdot;</span>
+                        </div>
+                        {% if room.host.superhost %}
+                            <span class="ml-1">Superhost</span>
+                            <span class="mx-2">&centerdot;</span>
+                        {% endif %}
+                        <div class="font-medium">
+                            <span class="mr-1">{{room.address}},</span>
+                            <span class="mr-1">{{room.city}},</span>
+                            <span>{{room.country.name}}</span>
+                        </div>
+                    </div>
+                    <div class="flex mb-10 items-center">
+                        <button class="button w-48 bg-red-500">
+                            <a  href="{% url 'reservations:cancel' reservation.pk %}">Cancel Reservation</a>
+                        </button>
+                    </div>
+                    <div class="w-11/12 grid grid-cols-2 gap-10 border-b border-gray-300 mb-6 pb-6">
+                        {% include 'mixins/calendar.html' with page="reservation_page" reservation="reservation" %}
                     </div>
                 </div>
-                <div class="flex mb-10 items-center">
+                <div class="w-2/5">
                     
-                    <button class="button w-1/5 bg-red-500">
-                        <a  href="{% url 'reservations:cancel' reservation.pk %}">Cancel Reservation</a>
-                    </button>
-                </div>
-                
-                <div class="w-3/5 grid grid-cols-2 gap-10 mr-40 border-b border-gray-300 mb-6 pb-6">
-                    {% include 'mixins/calendar.html' with page="reservation_page" reservation="reservation" %}
+                    {% if reservation.status == 'confirmed' and reservation.is_finished %}
+                        <span class="font-medium text-2xl text-center w-full block mb-5">Write your review</span>
+                        <form action="{% url 'reviews:create' reservation.pk %}" method="post" class="w-full">
+                            {% csrf_token %}
+                            <div class="border p-3 border-gray-400 rounded">
+                                <textarea name="review" id="" rows="5" placeholder="Write a review" class="w-full resize-none"></textarea>
+                            </div>
+                            <div class="grid grid-cols-2 gap-1 mt-1">
+                                <div class="border p-3 border-gray-400 rounded">
+                                    <input type="number" name="accuracy" placeholder="Accuracy Points" min=0 max=5 class="outline-none w-full">
+                                </div>
+                                <div class="border p-3 border-gray-400 rounded">
+                                    <input type="number" name="communication" placeholder="Communication Points" min=0 max=5 class="outline-none w-full">
+                                </div>
+                                <div class="border p-3 border-gray-400 rounded">
+                                    <input type="number" name="cleanliness" placeholder="Cleanliness Points" min=0 max=5 class="outline-none w-full">
+                                </div>
+                                <div class="border p-3 border-gray-400 rounded">
+                                    <input type="number" name="location" placeholder="Location Points" min=0 max=5 class="outline-none w-full">
+                                </div>
+                                <div class="border p-3 border-gray-400 rounded">
+                                    <input type="number" name="check_in" placeholder="Check In Points" min=0 max=5 class="outline-none w-full">
+                                </div>
+                                <div class="border p-3 border-gray-400 rounded">
+                                    <input type="number" name="value" placeholder="Value Points" min=0 max=5 class="outline-none w-full">
+                                </div>
+                            </div>
+                            <button class="form_button mt-5">Submit Review</button>
+                        </form>
+                    {% endif %}
+                        
                 </div>
             </main>
         </div>
