--- a/templates/pages/reservations/reservation_host_room_list.html
+++ b/templates/pages/reservations/reservation_host_room_list.html
@@ -43,7 +43,7 @@
         </table>
         <div class="flex justify-center mt-6 itmes-center">
             <button class="button bg-gray-700 w-1/6">
-                <a href="{% url 'reservations:list' user.pk %}">Back</a>
+                <a href="{% url 'reservations:host-list' user.pk %}">Back</a>
             </button>
         </div>
         <div class="flex justify-center mt-20 itmes-center">
