--- a/templates/pages/users/change_password.html
+++ b/templates/pages/users/change_password.html
@@ -5,6 +5,9 @@
   Change {{user.first_name}}'s Password
 {% endblock page_title %}
   
+{% block search-bar %}
+<div></div>
+{% endblock search-bar %}
 
 {% block content %}
   <div class="background">
