--- a/templates/pages/users/login.html
+++ b/templates/pages/users/login.html
@@ -4,6 +4,10 @@
   Login
 {% endblock page_title %}
 
+{% block search-bar %}
+<div></div>
+{% endblock search-bar %}
+
 {% block content %}
   <div class="background">
     <div class="wrap">
