--- a/templates/pages/users/profile.html
+++ b/templates/pages/users/profile.html
@@ -5,6 +5,10 @@
   {{user_obj.first_name}}'s Profile
 {% endblock page_title %}
 
+{% block search-bar %}
+<div></div>
+{% endblock search-bar %}
+
 {% block content %}
   <div class="grid grid-cols-3 items-center px-16 mb-20">
     <div></div>
