--- a/templates/pages/users/signup.html
+++ b/templates/pages/users/signup.html
@@ -5,6 +5,9 @@
   Sign Up
 {% endblock page_title %}  
 
+{% block search-bar %}
+<div></div>
+{% endblock search-bar %}
 
 {% block content %}
   <div class="background">
