--- a/templates/pages/users/update_profile.html
+++ b/templates/pages/users/update_profile.html
@@ -4,7 +4,10 @@
 {% block page_title %}
   Edit {{user.first_name}}'s Profile
 {% endblock page_title %}
-  
+
+{% block search-bar %}
+<div></div>
+{% endblock search-bar %}
 
 {% block content %}
   <div class="background">
