--- a/templates/pages/rooms/detail.html
+++ b/templates/pages/rooms/detail.html
@@ -197,9 +197,13 @@
                         <div class="flex flex-col">
                             <span class="mb-4">Response rate : 100%</span>
                             <span class="mb-6">Response time : In one hour</span>
-                            <button class="button px-1 py-2 w-1/2">
-                                <a href="{% url 'conversations:conversation' room.pk room.host.pk user.pk %}">Contact the host</a>
-                            </button>
+
+                            {% if room.host.pk != user.pk %}
+                                <button class="button px-1 py-2 w-1/2">
+                                    <a href="{% url 'conversations:conversation' room.pk room.host.pk user.pk %}">Contact the host</a>
+                                </button>
+                            {% endif %}
+                                
                         </div>
                     </div>
                 </div>
