--- a/templates/pages/rooms/room_detail.html
+++ b/templates/pages/rooms/room_detail.html
@@ -197,13 +197,11 @@
                         <div class="flex flex-col">
                             <span class="mb-4">Response rate : 100%</span>
                             <span class="mb-6">Response time : In one hour</span>
-
-                            {% if room.host.pk != user.pk %}
+                            
                                 <button class="button px-1 py-2 w-1/2">
-                                    <a href="{% url 'conversations:conversation' room.pk room.host.pk user.pk %}">Contact the host</a>
+                                    <a href="{% url 'conversations:create-conversation' room.host.pk user.pk %}">Contact the host</a>
                                 </button>
-                            {% endif %}
-                                
+                            
                         </div>
                     </div>
                 </div>
