--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
-{% load static %}
+{% load static i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -20,7 +21,12 @@
       {% block search-bar %}
         <div class="w-full flex justify-center items-center">
           <form action="{% url 'core:search' %}" class="w-3/4">
-            <input type="text" placeholder="Searching By City" name="city" class="shadow border-none outline-none px-8 py-3 rounded-3xl w-full border-gray-500 border">
+            <input 
+            type="text"
+            placeholder="{% trans 'Searching By City' %}"
+            name="city" 
+            class="shadow border-none outline-none px-8 py-3 rounded-3xl w-full border-gray-500 border"
+            >
           </form>
         </div>
       {% endblock search-bar %}
@@ -30,4 +36,12 @@
     {% block content %}{% endblock content %}
     {% include 'partials/footer.html' %}
   </body>
+    <script>
+      const jsLang = document.getElementById("js-lang");
+      const handleChange = ()=>{
+        const selected  = jsLang.value;
+        fetch(`{% url 'users:switch-language' %}?lang=${selected}`).then(()=>window.location.reload());
+      }
+      jsLang.addEventListener("change", handleChange);
+    </script>
 </html>
