Move script from base.html to translator.js file

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,13 +35,6 @@
 
     {% block content %}{% endblock content %}
     {% include 'partials/footer.html' %}
+    <script src="{% static 'js/main.js' %}"></script>
   </body>
-    <script>
-      const jsLang = document.getElementById("js-lang");
-      const handleChange = ()=>{
-        const selected  = jsLang.value;
-        fetch(`{% url 'users:switch-language' %}?lang=${selected}`).then(()=>window.location.reload());
-      }
-      jsLang.addEventListener("change", handleChange);
-    </script>
 </html>
