--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <header class='z-20 grid grid-cols-3 justify-between items-center px-14 border-b-2 mb-9 fixed w-full h-20 bg-white inset-0'>
       <div class="flex ">
         <a href="{% url 'core:home' %}" class="mr-4 flex items-center">
-          <img src="/static/logo.png" alt="logo" class="w-8 mr-2">
+          <img src="{% static 'img/logo.png' %}" alt="logo" class="w-8 mr-2">
           <span class="font-bold text-xl text-red-500">hairbnb</span>
         </a>
       </div>
