Fix file upload

--- a/templates/pages/users/update_profile.html
+++ b/templates/pages/users/update_profile.html
@@ -50,7 +50,7 @@
         {% if user.login_method == "email" %}
           <div class="form_input">
             <label for="avatar">Avatar</label>
-            <input type="file" id="avatar" name="avatar">
+            <input type="file" id="avatar" name="avatar" accept="image/*">
           </div>
         {% endif %}
 
