Add accept=image/* to file input

--- a/templates/pages/rooms/photos/create_photo.html
+++ b/templates/pages/rooms/photos/create_photo.html
@@ -19,7 +19,7 @@
         </div>
         
         <div class="border p-3 border-gray-400 flex justify-between rounded-bl-lg rounded-br-lg">
-          <input type="file" name="photo" class="p-1 w-full">
+          <input type="file" name="photo" class="p-1 w-full" accept="image/*">
         </div>
         <button class="form_button">Create</button>
       </form>
