Add div to header without search-bar

--- a/templates/pages/rooms/create_room.html
+++ b/templates/pages/rooms/create_room.html
@@ -4,8 +4,9 @@
   Create {{user.first_name}}'s Room
 {% endblock page_title %}
 
-
-{% block search-bar %}{% endblock search-bar %}
+{% block search-bar %}
+<div></div>
+{% endblock search-bar %}
   
 
 {% block content %}
