--- a/templates/pages/rooms/photos/edit_photo.html
+++ b/templates/pages/rooms/photos/edit_photo.html
@@ -5,7 +5,9 @@
 {% endblock page_title %}
 
 
-{% block search-bar %}{% endblock search-bar %}
+{% block search-bar %}
+<div></div>
+{% endblock search-bar %}
 
 {% block content %}
   <div class="background">
